name:           graphmod
version:        1.2.5
license:        BSD3
license-file:   LICENSE
author:         Iavor S. Diatchki
maintainer:     iavor.diatchki@gmail.com
homepage:       http://github.com/yav/graphmod/wiki
build-type:     Simple
cabal-version:  >= 1.2
synopsis:       Present the module dependencies of a program as a "dot" graph.
description:    This package contains a program that computes "dot" graphs
                from the dependencies of a number of Haskell modules.
category:       Development

executable graphmod
    main-is:         Main.hs
    other-modules:   Utils, Trie
    build-depends:   base < 5, directory, filepath, dotgen >= 0.2 && < 0.5,
                     haskell-lexer, containers
    hs-source-dirs:  src
    ghc-options:     -Wall -O2
