name:           graphmod
version:        1.4.5.1
license:        BSD3
license-file:   LICENSE
author:         Iavor S. Diatchki
maintainer:     iavor.diatchki@gmail.com
homepage:       http://github.com/yav/graphmod/wiki
build-type:     Simple
cabal-version:  >= 1.10
synopsis:       Present the module dependencies of a program as a "dot" graph.
description:    This package contains a program that computes "dot" graphs
                from the dependencies of a number of Haskell modules.
category:       Development

tested-with:    GHC==8.6.5,
                GHC==8.8.4,
                GHC==8.10.3,
                GHC==9.2.4

extra-source-files: CHANGELOG.md

executable graphmod
  main-is: Main.hs
  hs-source-dirs: driver
  ghc-options: -Wall -O2
  build-depends:
      base < 5
    , graphmod
  default-language: Haskell2010

library
    exposed-modules: Graphmod, Graphmod.Utils
    other-modules:   Graphmod.Trie, Graphmod.CabalSupport, Paths_graphmod
    build-depends:   base < 5, directory, filepath, dotgen >= 0.2 && < 0.5,
                     haskell-lexer >= 1.0.2, containers, Cabal, pretty
    hs-source-dirs:  src
    ghc-options:     -Wall -O2
    default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/yav/graphmod
