Name:                dotgen
Version:             1.1
Synopsis:            A writer function to the dot graph file format
Category:            Data
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          andy@monadgarden.com
Build-Depends:       base
Exposed-Modules:     Data.Dot

-- Simple test framework, requires ghc-6.8
Executable:          dotgen-test
hs-source-dirs:	     test, .
Main-is:             DotTest.hs
ghc-options:	     -fhpc

	
